--- a/index.html
+++ b/index.html
@@ -6,35 +6,77 @@
 		<style type="text/css">
 			html, body{
 				box-sizing: border-box;
+				margin: 0px;
+				padding: 0px;
+				height: 100%;
+				width: 100%;
+			}
+			p{
+				margin: 0px;
+			}
+			.color{
+				padding: 2em 2em;
+				font-family: monospace;
+			}
+			.colorlist{
+				display: flex;
+				justify-content: center;
+				align-items: flex-start;
+				align-content: flex-start;
+				align-self: flex-start;
+				flex-wrap: wrap;
+				overflow-y: scroll;
+				max-height: 100%;
+				flex: 1 1 auto;
+			}
+			.sliderlabel{
+				display: flex;
+				flex: 1 0 auto;
+				justify-content: space-between;
+			}
+			.optionslabel{
+				width: 160px;
+				margin: 10px;
+				background-color: grey;
 			}
 		</style>
 	</head>
-	<body onload="main()">
-		<h1>Solr</h1>
-		<div id="colorlist" style="display: flex;justify-content: center;align-items: center;flex-wrap: wrap;"></div>
-		<p>
-			Hue Value: <input type="number" id="huevaluenum" min="0" max="255" value="0">
-			<br>
-			<input type="range" id="huevalue" min="0" max="255" value="0">
-			<br>
-			Hue Shift: <input type="number" id="hueshiftnum" min="-255" max="255" value="0">
-			<br>
-			<input type="range" id="hueshift" min="-255" max="255" value="0">
-			<br>
-			Hue Saturation: <input type="number" id="hueintennum" min="0" max="255" value="127">
-			<br>
-			<input type="range" id="hueinten" min="0" max="255" value="127">
-			<br>
-			Number Colors: <input type="number" id="numcolornum" min="2" max="128" value="8">
-			<br>
-			<input type="range" id="numcolor" min="2" max="128" value="8">
-		</p>
+	<body onload="main()" style="display: flex;">
+		<div style="background-color: silver;">
+			<div class="optionslabel">
+				<h1 style="margin: 0px; padding: 10px;">
+					<span style="color: #59110d">S</span><span style="color: #b34f19">o</span><span style="color: #e6b04c">l</span><span style="color: #f2eea6">r</span>
+				</h1>
+				<div class="sliderlabel" title="Base hue value">
+					<p>Hue Value:</p>
+					<input type="number" id="huevaluenum" min="0" max="360" value="0">
+				</div>
+				<input style="width: 98%" type="range" id="huevalue" min="0" max="360" value="0">
+				<div class="sliderlabel" title="Overall hue change">
+					<p>Hue Shift:</p>
+					<input type="number" id="hueshiftnum" min="-360" max="360" value="0">
+				</div>
+				<input style="width: 98%" type="range" id="hueshift" min="-360" max="360" value="0">
+				<div class="sliderlabel" title="Saturation of colors">
+					<p>Saturation:</p>
+					<input type="number" id="hueintennum" min="0" max="100" value="50">
+				</div>
+				<input style="width: 98%" type="range" id="hueinten" min="0" max="100" value="50">
+				<div class="sliderlabel" title="Number of colors to generate">
+					<p>Number Colors:</p>
+					<input type="number" id="numcolornum" min="2" max="128" value="8">
+				</div>
+				<input style="width: 98%" type="range" id="numcolor" min="2" max="128" value="8">
+			</div>
+		</div>
+		<div id="colorlist" class="colorlist"></div>
+
 		<script type="text/javascript">
 			let colorlist, huevaluenum, hueshiftnum, hueintennum, numcolornum
 			let colors = []
 			let value = 0 // initial value
 			let shift = 0 // shift applied at each color step
-			let inten = 127 // lightness?
+			let inten = 50 // lightness?
 			let color = 8 // number of colors
 			function main(){
 				colorlist = document.getElementById('colorlist')
@@ -47,66 +89,53 @@
 				hueintennum = document.getElementById('hueintennum')
 				numcolornum = document.getElementById('numcolornum')
 
-				huevalue.addEventListener('input', (evt)=>{
-					huevaluenum.value = value
-					onValue(evt)
-				})
-				hueshift.addEventListener('input', (evt)=>{
-					hueshiftnum.value = shift
-					onShift(evt)
-				})
-				hueinten.addEventListener('input', (evt)=>{
-					hueintennum.value = inten
-					onInten(evt)
-				})
-				numcolor.addEventListener('input', (evt)=>{
-					numcolornum.value = color
-					onNumbe(evt)
-				})
+				huevalue.addEventListener('input', onValue)
+				hueshift.addEventListener('input', onShift)
+				hueinten.addEventListener('input', onInten)
+				numcolor.addEventListener('input', onNumbe)
 
-				huevaluenum.addEventListener('input', (evt)=>{
-					huevalue.value = value
-					onValue(evt)
-				})
-				hueshiftnum.addEventListener('input', (evt)=>{
-					hueshift.value = shift
-					onShift(evt)
-				})
-				hueintennum.addEventListener('input', (evt)=>{
-					hueinten.value = inten
-					onInten(evt)
-				})
-				numcolornum.addEventListener('input', (evt)=>{
-					numcolor.value = color
-					onNumbe(evt)
-				})
+				huevaluenum.addEventListener('input', onValue)
+				hueshiftnum.addEventListener('input', onShift)
+				hueintennum.addEventListener('input', onInten)
+				numcolornum.addEventListener('input', onNumbe)
 				onNumbe({target:numcolornum})
 				onChange()
 			}
 
 			function onValue(evt){
-				huevaluenum.value = value = parseInt(evt.target.value)
+				if(evt.target.value.length < 1){ // if value is NaN
+					return
+				}
+				huevalue.value = huevaluenum.value = value = parseInt(evt.target.value)
 				onChange()
 			}
 			function onShift(evt){
-				hueshiftnum.value = shift = parseInt(evt.target.value)
+				if(evt.target.value.length < 1){ // if value is NaN
+					return
+				}
+				hueshift.value = hueshiftnum.value = shift = parseInt(evt.target.value)
 				onChange()
 			}
 			function onInten(evt){
-				hueintennum.value = inten = parseInt(evt.target.value)
+				if(evt.target.value.length < 1){ // if value is NaN
+					return
+				}
+				hueinten.value = hueintennum.value = inten = parseInt(evt.target.value)
 				onChange()
 			}
 			function onNumbe(evt){
-				numcolornum.value = color = parseInt(evt.target.value)
+				if(evt.target.value.length < 1){ // if value is NaN
+					return
+				}
+				numcolor.value = numcolornum.value = color = parseInt(evt.target.value)
 
 				while(true){ // add or remove span elems to match new len
 					if(color > colors.length){
 						let span = document.createElement('span')
-						span.style.padding = '2em 2em'
-						span.style.fontFamily = 'monospace'
+						span.className = 'color'
 						colorlist.appendChild(span)
 						colors.push(span)
-					}else if(color < colors.length){
+					}else if(color < colors.length && colors.length > 0){
 						colorlist.removeChild(colorlist.firstChild)
 						colors.shift()
 					}else{
@@ -118,16 +147,31 @@
 			}
 
 			function onChange(){
-				let v = value
-				for(let a = color; a > 0; a--){
-					// normalize hue
-					let c = getColor((v / 255)%1, inten / 255, a / (color+1))
-					v += shift / (color+1)
-
+				// assign cl as if there were 1 extra color, to remove white
+				let cl = colors.length + 1
+				// set a to 1 indexed instead of 0 indexed to remove black
+				for(let a = colors.length; a > 0; a--){ // don't do 0 to remove black
+					/* normalize hue from 0 -> 360 to 0 -> 1
+					the shift value is added here, multiplied by the color's current position on the list from halfway through the list, and divided by the length of the list overall
+					*/
+					let h = ((value + shift * (a - cl / 2) / cl) / 360) % 1
+					let s = inten / 100
+					let l = a / cl 
+					let c = getColor(h, s, l)
+					
 					let span = colors[a-1]
 					span.innerHTML = getHex(...c)
 					span.style.backgroundColor = getBkg(...c)
-					span.style.color = getBkg(255-c[0], 255-c[1], 255-c[2])
+
+					if(s < 1/3 && l > 2/5 && l < 3/5){
+						if(0.299 * c[0] + 0.587 * c[1] + 0.114 * c[2] > 127){
+							span.style.color = 'black'
+						}else{
+							span.style.color = 'white'
+						}
+					}else{
+						span.style.color = getBkg(255-c[0], 255-c[1], 255-c[2])						
+					}
 				}
 			}
 			function getColor(h, s, l){
