added readme, clicking name opens repo in new tab

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 		<div style="background-color: silver;">
 			<div class="optionslabel">
 				<h1 style="margin: 0px; padding: 10px;">
-					<span style="color: #59110d">S</span><span style="color: #b34f19">o</span><span style="color: #e6b04c">l</span><span style="color: #f2eea6">r</span>
+					<a href="https://github.com/Clarvel/Solr/" target="_blank"><span style="color: #59110d">S</span><span style="color: #b34f19">o</span><span style="color: #e6b04c">l</span><span style="color: #f2eea6">r</span>
+					</a>
 				</h1>
 				<div class="sliderlabel" title="Base hue value">
 					<p>Hue Value:</p>
